...
    <string name="btn_copy_decrypted_text">"Copy to clipboard"</string>
    <string name="btn_decrypt_clipboard">"Read from clipboard"</string>
    <string name="btn_decrypt_files">"Select input file"</string>
    <string name="btn_encrypt_files">"Encrypt files"</string>
    <string name="btn_encrypt_text">"Encrypt text"</string>
    <string name="btn_add_email">"Add additional email address"</string>
    <string name="btn_unlock">"Unlock"</string>
    <string name="btn_proceed">"Proceed"</string>
    <string name="btn_save_default">"Save as default"</string>
    <string name="btn_saved">"Saved!"</string>
    <string name="btn_not_matching">"Not matching"</string>

    <!-- Shortcut Strings -->
...
    <string name="alert_strip">"Stripping this subkey will make it unusable on this device!"</string>

    <string name="key_not_found">"Couldn't find key %08X."</string>
    <string name="authentication_subkey_not_found">"This key does not have an authentication subkey."</string>

    <string name="list_empty">"This list is empty!"</string>
    <string name="key_copied_to_clipboard">"Key has been copied to the clipboard!"</string>
    <string name="fingerprint_copied_to_clipboard">"Fingerprint has been copied to the clipboard!"</string>
    <string name="select_key_to_certify">"Please select a key to be used for confirmation!"</string>
    <string name="text_copied_to_clipboard">"Text has been copied to the clipboard!"</string>
    <string name="how_to_import">"How to import this on my desktop PC?"</string>
    <!--
         errors
         no punctuation, all lowercase,
...
    <string name="edit_key_error_bad_security_token_size">"RSA key lower than 2048 bits are not supported by Security Tokens since OpenPGP card specification 3.x!"</string>
    <string name="edit_key_error_bad_security_token_curve">"Curve not supported by Security Token!"</string>
    <string name="edit_key_error_bad_security_token_stripped">"Cannot move key to Security Token (either stripped or already on Security Token)!"</string>

    <!-- Create key -->
    <string name="create_key_upload">"Publish on keyservers"</string>
    <string name="create_key_empty">"This field is required"</string>
    <string name="create_key_passphrases_not_equal">"Passwords do not match"</string>
    <string name="create_key_final_text">"You entered the following identity:"</string>
    <string name="create_key_final_robot_text">"Creating a key may take a while, have a cup of coffee in the meantime…"</string>
    <string name="create_key_final_email_valid_warning">"Many applications work better when provided with keys only containing valid email addresses"</string>
    <string name="create_key_name_text">"Choose a name associated with this key. This can be a full name, e.g., 'John Doe', or a nickname, e.g., 'Johnny'."</string>
    <string name="create_key_email_text">"Enter your main email address used for secure communication."</string>
...
    <!-- Add/Edit SmartPGP authority -->
    <string name="add_smartpgp_authority_dialog_title">"Add authority"</string>
    <string name="show_smartpgp_authority_dialog_title">"Edit authority"</string>

    <!-- Navigation Drawer -->
    <string name="nav_keys">"Keys"</string>
    <string name="nav_encrypt_decrypt">"Encrypt/Decrypt"</string>
    <string name="nav_apps">"Apps"</string>
    <string name="my_keys">"My Keys"</string>
    <string name="nav_backup">"Backup/Restore"</string>

    <!-- hints -->
    <string name="encrypt_content_edit_text_hint">"Type text"</string>
...
