<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- focusable and related properties to workaround http://stackoverflow.com/q/16182331-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:descendantFocusability="beforeDescendants"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp">

        <TextView
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:text="@string/section_fingerprint"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/view_key_action_fingerprint_share"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:clickable="true"
            style="@style/SelectableItem"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/view_key_fingerprint"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:text=""
                android:layout_weight="1"
                android:typeface="monospace"
                android:drawableRight="@drawable/ic_action_share"
                android:drawablePadding="8dp"
                android:gravity="center_vertical" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:gravity="right"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider" />

            <ImageButton
                android:id="@+id/view_key_action_fingerprint_clipboard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_action_copy"
                android:layout_gravity="center_vertical"
                style="@style/SelectableItem" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider" />

        <ImageView
            android:id="@+id/view_key_fingerprint_qr_code_image"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            style="@style/SelectableItem" />

        <TextView
            style="@style/SectionHeader"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="14dp"
            android:text="@string/section_share_key"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/view_key_action_key_share"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:clickable="true"
            style="@style/SelectableItem"
            android:orientation="horizontal">

            <TextView
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:text="@string/key_view_action_share_with"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_action_share"
                android:drawablePadding="8dp"
                android:gravity="center_vertical" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:gravity="right"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider" />

            <ImageButton
                android:id="@+id/view_key_action_key_clipboard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_action_copy"
                android:layout_gravity="center_vertical"
                style="@style/SelectableItem" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:gravity="right"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider" />

            <ImageButton
                android:id="@+id/view_key_action_key_safeslinger"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_action_safeslinger"
                android:layout_gravity="center_vertical"
                style="@style/SelectableItem" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/view_key_action_upload"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?android:attr/listPreferredItemHeight"
            android:clickable="true"
            style="@style/SelectableItem"
            android:text="@string/key_view_action_upload"
            android:layout_weight="1"
            android:drawableRight="@drawable/ic_action_upload"
            android:drawablePadding="8dp"
            android:gravity="center_vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/view_key_action_nfc_help"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/listPreferredItemHeight"
            android:clickable="true"
            style="@style/SelectableItem"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <TextView
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_width="0dip"
                android:layout_height="match_parent"
                android:text="@string/key_view_action_share_nfc"
                android:layout_weight="1"
                android:drawableRight="@drawable/ic_action_help"
                android:drawablePadding="8dp"
                android:gravity="center_vertical" />

            <View
                android:layout_width="1dip"
                android:layout_height="match_parent"
                android:gravity="right"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider" />

            <ImageButton
                android:id="@+id/view_key_action_nfc_prefs"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:src="@drawable/ic_action_settings"
                android:layout_gravity="center_vertical"
                style="@style/SelectableItem" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>
