<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/wizard_activity_margin"
                android:paddingBottom="48dp"
                android:persistentDrawingCache="all">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_key_name_text"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <org.sufficientlysecure.keychain.ui.widget.NameEditText
                android:id="@+id/create_key_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/create_key_hint_full_name"
                android:imeOptions="actionDone"
                android:inputType="textAutoCorrect|textPersonName|textCapWords"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>