...
                android:drawablePadding="8dp"
                android:gravity="left|center_vertical"
                android:text="@string/btn_back"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/nextButton"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:drawablePadding="8dp"
                android:drawableRight="@drawable/ic_chevron_right_grey_24dp"
...
